# Unit-Value

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
examples/: ForceExample.cpp  Makefile.am  Makefile.in  UnitsExample.cpp
include/: Conversions.h  UValue.h  UValue.hpp
src/: Conversions.cpp  Makefile.am  Makefile.in  UValue.cpp
tests/: ConversionsUnitTest.cpp  Makefile.am  Makefile.in  TestMapping.cpp
